--- a/styles/_edit.component.scss
+++ b/styles/_edit.component.scss
@@ -15,7 +15,6 @@
             margin: 0 20px;
         }
         .pull-right {
-            margin-right: 20px;
             margin-top: 12px;
         }
         .glyphicon {
